@@ -1,5 +1,9 @@
 2009-12-17  Stas Boukarev  <stassats@gmail.com>
 
+	* swank-match.lisp: Fix formatting and style warnings.
+
+2009-12-17  Stas Boukarev  <stassats@gmail.com>
+
 	* swank.lisp (handle-requests): Comment out
 	(assert (boundp '*sldb-quit-restart*)) because it's not bound
 	on NIL communication style. It's not a real fix, but at least it
